2002-03-15  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* tools.texi (guile-1.4 guile-snarf): Remove this node.
	(How guile-snarf works): Update usage and description to
	no longer mention "--compat=1.4" and instead "-d" and "-D".
	(Macros guile-snarf recognizes): Add list of deprecated macros
	and blurb.  Add cindex for deprecated macros.

2002-03-15  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-utility.texi (Object Properties): Revamp documentation on
	object properties.

	* scheme-memory.texi (Weak References): Update reference to Object
	Properties node.

	* guile.texi: Add macros for describing version information.

	* scheme-data.texi, scheme-debug.texi, scheme-io.texi,
	scheme-procedures.texi: Automatic updates from snarfed libguile
	docstrings.

2002-03-13  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (guile_toc.html): Look for guile.texi in $(srcdir).

	* tools.texi (How guile-snarf works): Mention "--compat=1.4", and
	new processing steps.  Update usage example, makefile frag.

	(guile-1.4 guile-snarf): New subsubsection under
	"Init Snarfing with guile-snarf".

2002-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-compound.texi, scheme-data.texi, new-docstrings.texi:
	Automatic updates from snarfed libguile docstrings.

	* data-rep.texi, guile.texi, scheme-evaluation.texi,
	scheme-options.texi, scheme-translation.texi: Various minor
	enhancements ported from the stable CVS branch.

2002-03-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* tools.texi (Miscellaneous Tools): New node/chapter.
	(Snarfing, Init Snarfing with guile-snarf, How guile-snarf works,
	Macros guile-snarf recognizes, Doc Snarfing): New nodes/(sub)sections.
	(Executable Modules): Now a section under "Miscellaneous Tools".

	* guile.texi (Miscellaneous Tools): Add under "Part II".
	Implement by including tools.texi.

	* Makefile.am (guile_TEXINFOS): Add tools.texi.

2002-03-07  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* tools.texi: New file.
